# RaspberryPiPicoSinricPro

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/SinricPro/: CMakeLists.txt  SinricPro.c  SinricPro.h
lib/WebSocket/: CMakeLists.txt  WebSocket.c  WebSocket.h
lib/base64/: CMakeLists.txt  base64.h  base64encode.c
lib/dnsclient/: CMakeLists.txt  dnsclient.c  dnsclient.h
lib/hmac_sha256/: CMakeLists.txt  sha256.h
lib/httpclient/: CMakeLists.txt  httpClient.c  httpClient.h
lib/json/: CMakeLists.txt  json.c  json.h  tiny-json.c  tiny-json.h
